<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/title_dialog_choose_photo_picker"
            android:textColor="@color/create_diary_text_hint" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/oswald_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/cancel"
            android:textColor="@color/create_diary_text_content"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/WeatherSelectorContainer"
        android:id="@+id/llGallery">

        <ImageView
            style="@style/WeatherSelectorIcon"
            android:src="@drawable/ic_choose_photo_gallery" />

        <TextView
            android:text="@string/option_select_photo"
            style="@style/WeatherSelectorText"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View style="@style/Divider" />

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/WeatherSelectorContainer"
        android:id="@+id/llCamera">

        <ImageView
            style="@style/WeatherSelectorIcon"
            android:src="@drawable/ic_choose_photo_camera" />

        <TextView
            android:text="@string/option_take_photo"
            style="@style/WeatherSelectorText"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>